--- a/packages/office-ui-fabric-vue/package.json
+++ b/packages/office-ui-fabric-vue/package.json
@@ -48,6 +48,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-sucrase": "^3.1.0",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/cli-plugin-babel": "^4.5.7",
     "@vue/cli-plugin-typescript": "^4.5.7",
@@ -56,6 +57,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "rollup": "^2.30.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.3",
     "rollup-plugin-vue": "^5.1.9",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
