--- a/packages/office-ui-fabric-vue/tsconfig.json
+++ b/packages/office-ui-fabric-vue/tsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": "./",
     "noImplicitAny": false,
     "outDir": "lib",
-    "target": "es5",
-    "module": "ESNext",
+    "target": "esnext",
+    "module": "esnext",
     "isolatedModules": false,
     "moduleResolution": "Node",
     "strict": true,
